# Skill-Note

./: .gitignore  README.md
Skill-Note/: ARCHITECTURE.md  PROJECT_DESIGN.md  README.md  index.html  package-lock.json  package.json  setup.bat  tailwind.config.js  tsconfig.json  vite.config.ts
Skill-Note/src/: App.tsx
Skill-Note/src-tauri/: Cargo.toml  tauri.conf.json
Skill-Note/src-tauri/src/: main.rs
Skill-Note/src/components/: TopBar.tsx
Skill-Note/src/components/breadcrumb/: Breadcrumb.tsx
Skill-Note/src/components/editor/: EditorToolbar.tsx  EditorView.tsx  HybridMarkdownBlocksEditor.tsx  MarkdownEditor.tsx  MediaUploader.tsx
Skill-Note/src/components/mindmap/: MindMapEdge.tsx  MindMapNode.tsx  MindMapToolbar.tsx  MindMapView.tsx  NodeContentPreviewOverlay.tsx
Skill-Note/src/components/sidebar/: Sidebar.tsx  SkillCard.tsx
Skill-Note/src/models/: index.ts
Skill-Note/src/services/: storage.ts
Skill-Note/src/stores/: skillStore.ts  uiStore.ts
Skill-Note/src/styles/: globals.css
Skill-Note/src/utils/: autoLayout.ts
skills/opensource-component-extractor/: SKILL.md
skills/opensource-component-implementer/: SKILL.md
